--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -54,68 +54,18 @@
   margin: 5px;
   font-size: 100%;
   font-weight: 400;
+  text-decoration: underline;
 }
 
 .load {
-  font-size: 50px;
+  font-size: 30px;
   margin-bottom: 40px;
   border-radius: 20px;
-  width: 260px;
-  height: 80px;
+  width: 220px;
+  height: 60px;
   color: white;
   background-color: darkslategrey;
   cursor: pointer;
-}
-
-.book_description {
-  position: fixed;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 85%;
-  background-color: grey;
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 10fr;
-  grid-template-areas:
-    'image _'
-    'image categories'
-    'image title'
-    'image authors'
-    'image description';
-}
-
-#description_image {
-  grid-area: image;
-  max-width: 400px;
-  width: 90%;
-  height: 70%;
-  object-fit: contain;
-  margin: 50px auto;
-}
-
-@media (max-width: 540px) {
-  #description_image {
-    margin: 0px auto;
-  }
-}
-
-#description_categories {
-  grid-area: categories;
-}
-
-#description_title {
-  grid-area: title;
-}
-
-#description_authors {
-  grid-area: authors;
-}
-
-#description_description {
-  grid-area: description;
-  font-size: 90%;
-  overflow: scroll;
 }
 
 .loader {
